Remove OS dimension from no OS specific tests
This patch removes about 157 tests.

* test_cfn_init.py::test_replace_compute_on_failure: 4 -> 1
* test_pcluster_configure.py::test_pcluster_configure: 4 -> 1
* test_create.py::test_cluster_creation_with_invalid_ebs: 2 -> 1
* test_createami.py OSes redistributed between different createami tests:
    * test_createami.py::test_build_image: 5 -> 1
    * test_createami.py::test_kernel4_build_image_run_cluster: removed batch case 2 -> 1
* test_dcv.py::test_dcv_configuration OSes redistributed between different dcv tests:
    * ARM without GPU case removed because it is a subset of ARM + GPU: 2 -> 0
    * ARM + GPU: 2 -> 1
    * DCV on Batch removed: 2 -> 0
* test_disable_hyperthreading.py::test_hit_disable_hyperthreading: 4 -> 1
* test_iam.py::test_s3_read_write_resource: removed batch: 2 -> 1
* test_cluster_networking.py::test_existing_eip: removed batch: 2 -> 1
* test_cluster_networking.py::test_cluster_in_no_internet_subnet redistributed: 12 -> 4
* test_multi_cidr.py::test_multi_cidr: removed batch: 2 -> 1
* test_security_groups.py::test_additional_sg_and_ssh_from removed batch: 2 -> 1
* test_security_groups.py::test_overwrite_sg removed batch: 2 -> 1
* test_mpi.py::test_mpi most important OSes redistributed between different mpi tests: 15 -> 3
* test_slurm.py redistributed:
    * test_slurm.py::test_slurm: 5 -> 1
    * test_slurm.py::test_slurm_pmix: 10 -> 2
    * test_slurm.py::test_slurm_scaling: 4 -> 1
    * test_slurm.py::test_slurm_protected_mode: mixed OSes
    * test_slurm_accounting.py::test_slurm_accounting: 2 -> 1
    * test_slurm_accounting.py::test_slurm_accounting_disabled_to_enabled_update: 2 -> 1
* test_fsx_lustre.py::test_multiple_fsx: 10 -> 2
* test_fsx_lustre.py::test_multi_az_fsx: 5 -> 1
* test_fsx_lustre.py::test_fsx_lustre_backup: 9 -> 2
* test_efs.py::test_efs_compute_az: removed batch: 2 -> 1
* test_efs.py::test_multiple_efs: 11 -> 3
* test_raid.py::test_raid_performance_mode: 10 -> 3
* test_ebs.py

--- a/tests/integration-tests/configs/develop.yaml
+++ b/tests/integration-tests/configs/develop.yaml
@@ -23,15 +23,15 @@ test-suites:
           schedulers: ["slurm"]
         - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
           instances: ["c6gn.16xlarge"]
-          oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
+          oss: ["rhel8"]
           schedulers: ["slurm"]
         - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
           instances: ["hpc6id.32xlarge"]
-          oss: ["alinux2"]
+          oss: ["centos7"]
           schedulers: [ "slurm" ]
         - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
           instances: [{{ common.instance("instance_type_1") }}]
-          oss: [ "alinux2", "centos7", "ubuntu2004" ]
+          oss: ["ubuntu2004"]
           schedulers: [ "slurm" ]
     test_fabric.py::test_fabric:
       dimensions:
@@ -64,51 +64,39 @@ test-suites:
   scaling:
     # FixMe: MPI tests configs are duplications of the test in common.yaml.
     # The duplications are necessary because the scaling section here overwrites the scaling section in common.yaml.
-    test_mpi.py::test_mpi:
+    test_mpi.py::test_mpi:  # TODO: move outside of the scaling dir
       dimensions:
         - regions: ["ap-east-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ common.OSS_COMMERCIAL_X86 }}
+          oss: ["rhel8"]
           schedulers: ["slurm"]
         - regions: ["ca-central-1"]
           instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ common.OSS_COMMERCIAL_ARM }}
+          oss: ["ubuntu2004"]
           schedulers: ["slurm"]
     test_mpi.py::test_mpi_ssh:
       dimensions:
         - regions: ["eu-north-1"]
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ common.OSS_COMMERCIAL_X86 }}
+          oss: ["centos7"]
           schedulers: ["slurm"]
     test_scaling.py::test_multiple_jobs_submission:
       dimensions:
         - regions: {{ common.REGIONS_COMMERCIAL }}
-          instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ common.OSS_COMMERCIAL_X86 }}
+          instances: {{ common.INSTANCES_DEFAULT_ARM }}
+          oss: ["ubuntu2004"]
           schedulers: ["slurm"]
         - regions: {{ common.REGIONS_CHINA }}
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ common.OSS_CHINA_X86 }}
+          oss: ["alinux2"]
           schedulers: ["slurm"]
         - regions: {{ common.REGIONS_GOVCLOUD }}
           instances: {{ common.INSTANCES_DEFAULT_X86 }}
-          oss: {{ common.OSS_GOVCLOUD_X86 }}
-          schedulers: ["slurm"]
-        - regions: ["us-west-2"]
-          instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ common.OSS_COMMERCIAL_ARM }}
-          schedulers: {{ common.SCHEDULERS_TRAD }}
-        - regions: ["cn-north-1"]
-          instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ common.OSS_CHINA_ARM }}
-          schedulers: ["slurm"]
-        - regions: ["us-gov-east-1"]
-          instances: {{ common.INSTANCES_DEFAULT_ARM }}
-          oss: {{ common.OSS_GOVCLOUD_ARM }}
+          oss: ["rhel8"]
           schedulers: ["slurm"]
   trainium:
     test_trainium.py::test_trainium:
       dimensions:
         - regions: ["usw2-az4"]  # do not move, unless instance type support is moved as well
           schedulers: ["slurm"]
-          oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
+          oss: ["ubuntu2004"]
