--- a/tests/integration-tests/configs/common/common.yaml
+++ b/tests/integration-tests/configs/common/common.yaml
@@ -31,7 +31,7 @@ cfn-init:
     dimensions:
       - regions: ["af-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_cfn_init.py::test_install_args_quotes:
     dimensions:
@@ -89,7 +89,7 @@ configure:
     dimensions:
       - regions: ["af-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
       - regions: ["ap-southeast-2"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
@@ -122,7 +122,7 @@ configure:
     dimensions:
       - regions: ["us-east-1"]
         instances: {{ common.INSTANCES_EFA_UNSUPPORTED_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
 
 create:
@@ -161,7 +161,7 @@ create:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
         schedulers: ["slurm"]
-        oss: ["ubuntu1804", "ubuntu2004"]
+        oss: ["ubuntu2004"]
 createami:
   test_createami.py::test_invalid_config:
     dimensions:
@@ -172,12 +172,12 @@ createami:
     dimensions:
       - regions: ["eu-west-3"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
+        oss: ["ubuntu2004"]
   test_createami.py::test_kernel4_build_image_run_cluster:
     dimensions:
       - regions: ["eu-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        schedulers: ["awsbatch", "slurm"]
+        schedulers: ["slurm"]
         oss: ["alinux2"]
   test_createami.py::test_build_image_custom_components:
     dimensions:
@@ -186,7 +186,7 @@ createami:
         oss: ["rhel8"]
       - regions: ["eu-west-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: ["alinux2"]
+        oss: ["centos7"]
   test_createami.py::test_build_image_wrong_pcluster_version:
     dimensions:
       - regions: ["ca-central-1"]
@@ -211,28 +211,13 @@ dcv:
       # DCV on GPU enabled instance
       - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
         instances: ["g4dn.2xlarge"]
-        oss: {{common.OSS_COMMERCIAL_X86_NO_RHEL8 }}
-        schedulers: ["slurm"]
-      # DCV on ARM
-      - regions: ["sa-east-1"]
-        instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: ["alinux2", "ubuntu1804"]
+        oss: ["centos7"]
         schedulers: ["slurm"]
       # DCV on ARM + GPU
       - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
         instances: ["g5g.2xlarge"]
-        oss: ["alinux2", "ubuntu1804"]
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
-      # DCV on Batch
-      - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
-        instances: ["g4dn.2xlarge"]
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
-      # DCV on Batch + ARM
-      - regions: ["us-east-1"]
-        instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
       # DCV in cn regions and non GPU enabled instance
       - regions: ["cn-northwest-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
@@ -253,16 +238,12 @@ disable_hyperthreading:
   test_disable_hyperthreading.py::test_hit_disable_hyperthreading:
     dimensions:
       - regions: ["us-west-1"]
-        instances: ["m4.xlarge"]
-        oss: ["alinux2", "centos7"]
-        schedulers: ["slurm"]
-      - regions: ["us-west-1"]
         instances: ["c5.xlarge"]
-        oss: ["ubuntu1804", "ubuntu2004"]
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
         benchmarks:
           - mpi_variants: ["openmpi", "intelmpi"]
-            num_instances: [20] # Change the head node instance type if you'd test more than 30 instances
+            num_instances: [5] # Change the head node instance type if you'd test more than 30 instances
             slots_per_instance: 2
             partition: "ht-disabled"
             osu_benchmarks:
@@ -285,7 +266,7 @@ efa:
     dimensions:
       - regions: ["sa-east-1"]
         instances: ["c5n.9xlarge"]
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
       - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
         instances: ["p4d.24xlarge"]
@@ -293,11 +274,11 @@ efa:
         schedulers: ["slurm"]
       - regions: ["use1-az6"]  # do not move, unless capacity reservation is moved as well
         instances: ["c6gn.16xlarge"]
-        oss: ["alinux2", "ubuntu1804", "ubuntu2004"]
+        oss: ["centos7"]
         schedulers: ["slurm"]
       - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
         instances: [{{ common.instance("instance_type_1") }}]
-        oss: [ "alinux2", "centos7", "ubuntu2004" ]
+        oss: ["ubuntu2004"]
         schedulers: [ "slurm" ]
 iam:
   test_iam.py::test_iam_policies:
@@ -321,8 +302,8 @@ iam:
     dimensions:
       - regions: ["eu-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm", "awsbatch"]
+        oss: ["rhel8"]
+        schedulers: ["slurm"]
   test_iam.py::test_iam_resource_prefix:
     dimensions:
       - regions: [ "eu-north-1" ]
@@ -347,8 +328,8 @@ networking:
     dimensions:
       - regions: ["me-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["slurm", "awsbatch"]
+        oss: ["rhel8"]
+        schedulers: ["slurm"]
   test_networking.py::test_public_network_topology:
     dimensions:
       - regions: ["af-south-1", "us-gov-east-1", "cn-northwest-1"]
@@ -361,11 +342,11 @@ networking:
         # S3 bucket belonging to the same region and S3 VPC Endpoints only work within the region.
       - regions: ["us-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["centos7"]
         schedulers: ["slurm"]
       - regions: ["us-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
       - regions: ["cn-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
@@ -380,27 +361,19 @@ networking:
       - regions: ["ap-northeast-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
-        schedulers: ["slurm", "awsbatch"]
+        schedulers: ["slurm"]
   test_security_groups.py::test_additional_sg_and_ssh_from:
     dimensions:
       - regions: ["eu-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["centos7"]
         schedulers: ["slurm"]
-      - regions: ["eu-north-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
   test_security_groups.py::test_overwrite_sg:
     dimensions:
       - regions: ["eu-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["centos7"]
         schedulers: ["slurm"]
-      - regions: ["eu-north-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
   test_placement_group.py::test_placement_group:
     dimensions:
       - regions: ["eu-central-1"]
@@ -416,17 +389,17 @@ scaling:
     dimensions:
       - regions: ["ap-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
       - regions: ["eu-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
   test_mpi.py::test_mpi_ssh:
     dimensions:
       - regions: ["eu-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["centos7"]
         schedulers: ["slurm"]
 schedulers:
   test_awsbatch.py::test_awsbatch:
@@ -449,24 +422,20 @@ schedulers:
     dimensions:
       - regions: ["eu-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
   test_slurm.py::test_slurm_pmix:  # TODO: include in main test_slurm to reduce number of created clusters
     dimensions:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["centos7"]
         schedulers: ["slurm"]
       - regions: ["ap-northeast-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_slurm.py::test_slurm_scaling:
     dimensions:
-      - regions: ["us-west-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
-        schedulers: ["slurm"]
       - regions: ["use2-az2"]  # do not move, unless instance type support is moved as well
         instances: [{{ common.instance("instance_type_1") }}]
         oss: [ "alinux2" ]
@@ -481,13 +450,13 @@ schedulers:
     dimensions:
       - regions: ["ca-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_slurm.py::test_slurm_protected_mode_on_cluster_create:
     dimensions:
       - regions: ["ap-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["centos7"]
         schedulers: ["slurm"]
   test_slurm.py::test_fast_capacity_failover:
     dimensions:
@@ -499,13 +468,13 @@ schedulers:
     dimensions:
       - regions: ["ap-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["ubuntu1804"]
         schedulers: ["slurm"]
   test_slurm.py::test_slurm_memory_based_scheduling:
     dimensions:
       - regions: ["ap-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
   test_slurm.py::test_scontrol_reboot:
     dimensions:
@@ -535,13 +504,13 @@ schedulers:
     dimensions:
       - regions: ["us-east-1", "ap-south-1"]
         instances:  {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2", "ubuntu2004"]
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
   test_slurm_accounting.py::test_slurm_accounting_disabled_to_enabled_update:
     dimensions:
       - regions: ["us-west-2"]
         instances:  {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["centos7", "ubuntu1804"]
+        oss: ["centos7"]
         schedulers: ["slurm"]
   test_slurm.py::test_slurm_reconfigure_race_condition:
      dimensions:
@@ -574,7 +543,7 @@ storage:
     dimensions:
       - regions: ["eu-west-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
         benchmarks:
           - mpi_variants: ["openmpi", "intelmpi"]
@@ -584,7 +553,7 @@ storage:
               collective: ["osu_allreduce", "osu_alltoall"]
       - regions: ["eu-west-2"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
       - regions: ["cn-north-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
@@ -598,7 +567,7 @@ storage:
     dimensions:
       - regions: ["eu-west-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["centos7"]
         schedulers: ["slurm"]
   test_fsx_lustre.py::test_fsx_lustre_configuration_options:
     dimensions:
@@ -610,11 +579,11 @@ storage:
     dimensions:
       - regions: ["eu-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_ONE_PER_DISTRO }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
       - regions: ["ap-southeast-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
   # EFS tests can be done in any region.
   test_efs.py::test_efs_compute_az:
@@ -622,7 +591,7 @@ storage:
       - regions: ["ca-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["alinux2"]
-        schedulers: ["slurm", "awsbatch"]
+        schedulers: ["slurm"]
   test_efs.py::test_efs_same_az:
     dimensions:
       - regions: ["ca-central-1"]
@@ -633,13 +602,13 @@ storage:
   # We should consider this when assigning dimensions to each test.
   test_efs.py::test_multiple_efs:
     dimensions:
-      - regions: ["ca-central-1", "cn-northwest-1"]
+      - regions: ["cn-northwest-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_BATCH }}
+        oss: ["alinux2"]
         schedulers: ["awsbatch"]
       - regions: [ "ca-central-1" ]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["ubuntu2004"]
         schedulers: [ "slurm" ]
         benchmarks:
           - mpi_variants: ["openmpi", "intelmpi"]
@@ -649,7 +618,7 @@ storage:
               collective: ["osu_allreduce", "osu_alltoall"]
       - regions: ["us-gov-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_GOVCLOUD_X86 }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
   test_raid.py::test_raid_fault_tolerance_mode:
     dimensions:
@@ -661,39 +630,29 @@ storage:
     dimensions:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["ubuntu2004", "centos7"]
         schedulers: ["slurm"]
       - regions: ["us-gov-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_GOVCLOUD_X86 }}
+        oss: ["rhel8"]
         schedulers: ["slurm"]
-      - regions: ["ap-south-1"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_BATCH }}
-        schedulers: ["awsbatch"]
   test_ebs.py::test_ebs_multiple:
     dimensions:
-      - regions: ["us-east-2"]
-        instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
-        schedulers: ["awsbatch"]
       - regions: ["us-east-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
         oss: ["ubuntu1804"]
         schedulers: ["slurm"]
   test_ebs.py::test_ebs_single:
     dimensions:
-      {%- for region, oss in [("us-east-2", common.OSS_COMMERCIAL_X86), ("cn-northwest-1", common.OSS_CHINA_X86), ("us-gov-west-1", common.OSS_GOVCLOUD_X86)] %}
-      - regions: ["{{ region }}"]
+      - regions: ["us-gov-east-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ oss }}
+        oss: ["alinux2"]
         schedulers: ["slurm"]
-      {%- endfor %}
   test_ebs.py::test_ebs_snapshot:
     dimensions:
       - regions: ["us-east-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: ["alinux2"]
+        oss: ["rhel8"]
         schedulers: ["slurm"]
       - regions: ["cn-northwest-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
@@ -735,7 +694,7 @@ update:
     dimensions:
       - regions: ["eu-central-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["ubuntu2004"]
   test_update.py::test_update_compute_ami:
     dimensions:
       - regions: ["eu-west-1"]
@@ -757,11 +716,11 @@ update:
     dimensions:
       - regions: ["eu-west-2"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
       - regions: ["ap-northeast-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: {{ common.OSS_COMMERCIAL_ARM }}
+        oss: ["centos7"]
         schedulers: ["slurm"]
   test_update.py::test_multi_az_create_and_update:
     dimensions:
@@ -788,9 +747,9 @@ log_rotation:
     dimensions:
       - regions: ["ap-south-1"]
         instances: {{ common.INSTANCES_DEFAULT_X86 }}
-        oss: {{ common.OSS_COMMERCIAL_X86 }}
+        oss: ["ubuntu2004"]
         schedulers: ["slurm"]
       - regions: ["ap-northeast-1"]
         instances: {{ common.INSTANCES_DEFAULT_ARM }}
-        oss: ["alinux2", "ubuntu1804"]
+        oss: ["alinux2"]
         schedulers: ["slurm"]
